# my-crispy-invention

./: .gitignore  README.md  crud.py  main.py  pyproject.toml
api_calls/: call_grok.py  transaction_handler.py
config/: database.py  models.py  pydantic_models.py  request_wrapper.py  sqlalchemy_models.py  static.py
database/: crud.py  database.py  sqlalchemy_models.py
docs/: README.md  requirements.txt
flask_code/: flask_app.py  routes.py  templates.py  wsgi.py
